# ai-eval-engine

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
api/routes/: adapters.py  contracts.py  delta_contracts.py  evaluation.py  training.py
core/: config.py  delta_engine.py  image_gen.py  inference.py  schemas.py  synthetic_bootstrap.py  vllm_client.py
db/: crud.py  models.py  session.py
deploy/: Dockerfile  docker-compose.yml  k8s-deployment.yaml
deploy/cuda/: Dockerfile  docker-compose.yml
deploy/macos/: Dockerfile  docker-compose.yml
doc/: README.md  api-reference.md  architecture.md  deployment.md  layers.md  workflow.md
static/: index.html
tests/: images.jfif  potholefix.jfif  test_evaluation_pipeline.py  test_inference_parsing.py  wheel.jfif  windshield.jfif  windshield2jfif.jfif
worker/: tasks.py
