[tool.poetry]
name = "ai-eval-engine"
version = "0.1.0"
description = "Visual Contract Evaluation Engine — multi-tenant VLM assertion pipeline"
authors = ["MY <marcioyoshida@gmail.com>"]
packages = [
    { include = "api" },
    { include = "core" },
    { include = "db" },
    { include = "worker" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.0"
transformers = "^4.44.0"
accelerate = "^0.34.0"
# torch from standard PyPI includes MPS support on macOS Apple Silicon automatically.
# For Linux CUDA install torch separately via the pytorch.org wheel index.
torch = { version = "^2.4.0", optional = true }
torchvision = { version = "^0.19.0", optional = true }
qwen-vl-utils = { version = "^0.0.8", optional = true }
openai = "^1.40.0"
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.0.0"
pillow = "^10.4.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"

[tool.poetry.extras]
# macOS (Apple Silicon MPS) — standard PyPI torch, MPS detected at runtime
local-mps  = ["torch", "torchvision", "qwen-vl-utils"]
# Linux CUDA — install torch separately: pip install torch --index-url https://download.pytorch.org/whl/cu121
local-gpu  = ["torch", "torchvision", "qwen-vl-utils"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
